--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ img {
   left: -20%;
   content: "";
   display: block;
-  background-image: url(./img/Header/curve_arrow.svg);
+  background-image: url(../img/Header/curve_arrow.svg);
   background-repeat: no-repeat;
   width: 114px;
   height: 63px;
@@ -259,7 +259,7 @@ img {
 
 .swiper-button-prev::after {
   content: "";
-  background-image: url(./img/Header/arrow.svg);
+  background-image: url(../img/Header/arrow.svg);
   background-repeat: no-repeat;
   background-size: contain;
   -webkit-transform: rotate(180deg);
